Added Html for title section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,36 @@
     </header>
 
     <main>
+        <div class="title">
+            <div class="title-left">
+                <div class="title-left-text-top">
+                    <h1>This website is awesome</h1>
+                </div>
+                <div class="title-left-text-bottom">
+                    <p>This website has some subtext that goes here under the main title.
+                         It's a smaller font and the color is lower contrast.</p>
+                </div>
+                <div class="title-left-button">
+                    <div class="title-left-button-box">
+                    </div>
+                    <div class="title-left-button-text">
+                        <p>Sign up</p>
+                    </div>
+                </div>
+            </div>
+            <div class="title-right">
+                <div class="title-right-image-placeholder">
+                    <div class="title-right-image-placeholder-box">
 
+                    </div>
+                    <div class="title-right-image-placeholder-text">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
     </main>
 
     <footer>
