Cleaned up header div and fixed flexbox

--- a/index.html
+++ b/index.html
@@ -9,34 +9,22 @@
 </head>
 <body>
     <header>
-        <div class="bar">
-            <div class="bar-logo">
+        <div class="header_left">
                 <h3>Header Logo</h3>
-            </div>
-            <div class="bar-link">
-                <div class="bar-link1">
+            <div class="header_right">
                     <a href="null">link1</a>    
-                </div>
-                <div class="bar-link2">
                     <a href="null">link2</a>    
-                </div>
-                <div class="bar-link3">
                     <a href="null">link3</a>    
-                </div>
             </div>
         </div>
     </header>
 
     <main>
         <div class="title">
-            <div class="title-left">
-                <div class="title-left-text-top">
+            <div class="title_left">
                     <h1>This website is awesome</h1>
-                </div>
-                <div class="title-left-text-bottom">
                     <p>This website has some subtext that goes here under the main title.
                          It's a smaller font and the color is lower contrast.</p>
-                </div>
                 <div class="title-left-button">
                     <div class="title-left-button-text">
                         <p>Sign up</p>
