--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <main>
         <div class="title">
             <div class="title_left">
-                    <h1>This website is awesome</h1>
+                <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title.
                          It's a smaller font and the color is lower contrast.</p>
-                <div class="title-left-button">
-                    <div class="title-left-button-text">
+                <div class="title_left_button">
+                    <div class="title_left_button_text">
                         <p>Sign up</p>
                     </div>
                 </div>
             </div>
-            <div class="title-right">
-                <div class="title-right-image-placeholder">
-                    <div class="title-right-image-placeholder-text">
+            <div class="title_right">
+                <div class="title_right_image_placeholder">
+                    <div class="title_right_image_placeholder_text">
                         <p>this is a placeholder for an image</p>
                     </div>
                 </div>
