--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="title">
             <div class="title_left">
                 <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title.
-                         It's a smaller font and the color is lower contrast.</p>
+                    <p>This website has some subtext that goes here under the<br \>  main title.
+                         It's a smaller font and the color is lower<br \>  contrast.</p>
                 <div class="title_left_button">
                     <div class="title_left_button_text">
                         <p>Sign up</p>
@@ -39,7 +39,25 @@
                 </div>
             </div>
         </div>
-
+        <h4>Some random information.</h4>
+        <div class="box">
+            <div class="box_boxes">
+            <div class="box_boxes1">
+            </div>
+            <div class="box_boxes2">
+            </div>
+            <div class="box_boxes3">
+            </div>
+            <div class="box_boxes4">
+            </div>
+        </div>
+            <div class="box_text">
+                <p>this is some subtext <br \>under an illustration<br \> or image</p>
+                <p>this is some subtext <br \> under an illustration<br \>  or image</p>
+                <p>this is some subtext <br \> under an illustration<br \>  or image</p>
+                <p>this is some subtext <br \> under an illustration<br \>  or image</p>
+            </div>
+        </div>
 
     </main>
 
