--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
             </div>
         </div>
 
+        <div class="quote">
+        <div class="quote_text">
+            <p><i>This is an inspiring quote, or a testimonial from a <br \> customer.
+            Maybe it's just filling up space, or maybe <br \> people
+            will actually read it. Who knows? All I know<br \> Is that it looks nice.
+            </i></p>
+        </div>
+        <div class="quote_author">
+            <p>-Thor, God of Thunder</p>
+        </div>
+        </div>
+
     </main>
 
     <footer>
