added call to action and footer

--- a/index.html
+++ b/index.html
@@ -67,13 +67,36 @@
             </i></p>
         </div>
         <div class="quote_author">
-            <p>-Thor, God of Thunder</p>
+            <p><b>-Thor, God of Thunder</b></p>
         </div>
         </div>
+
+        <div class="action">
+            <div class="action_box">
+                <div class="action_box_left">
+                    <h6>Call to action! It's time!</h6>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="action_box_right">
+                    <div class="action_box_right_button">
+                        <div class="action_box_right_button_text">
+                            <p>Sign up</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
     </main>
 
     <footer>
+     <p>
+         Copyright © The Odin Project 2021
+     </p>   
 
     </footer>
 </body>
